src/objects/CCRE_UpSell_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_for_customer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_for_customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C10_Date_For_Product_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C10 Date For Product Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C8_Date_For_Product_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C8 Date For Product Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted_NEs_Per_Contract__c</fullName>
        <label>Contracted NEs Per Contract</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_NEs_per_customer__c</fullName>
        <label>Contracted NEs Per Customer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Info Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Type__c</fullName>
        <label>Line Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sales_line_items</fullName>
                </value>
                <value>
                    <fullName>Product_Info_line_items</fullName>
                </value>
                <value>
                    <fullName>Service_Invoice_Info_line_items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M7_Date_For_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>M7 Date For Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optiongroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Optiongroup</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product-Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_To_Convert_Image__c</fullName>
        <formula>IMAGE( 
IF( 
Ready_to_Convert__c, 
&quot;/resource/CorrectSign&quot;, 
&quot;/resource/WrongSign&quot; 
), &apos;NONE&apos;,20,20 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready To Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Convert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ready to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Code_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SI Code - Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Item_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales_Item_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_PCI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Proposal__c</fullName>
        <label>Upsell Proposal</label>
        <referenceTo>SWx_Upsell_Proposal__c</referenceTo>
        <relationshipLabel>CCRE Contract Items</relationshipLabel>
        <relationshipName>CCRE_UpSell_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CCRE Contract Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Upsell_Proposal__c</columns>
        <columns>Line_Item_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CCRE_UpSell_LineItem  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCRE Contract Items</pluralLabel>
    <recordTypes>
        <fullName>CCRE_Upsell_Proposal_Read_Only</fullName>
        <active>true</active>
        <label>CCRE Upsell Proposal Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>